# TimeSeriesAnomalyDetection

./: .gitignore  pyproject.toml
src/timeseriesanomalydetection/: plot.py  test.py  train.py
