[project]
name = "TimeSeriesAnomalyDetection"
version = "0.1.0"
description = "This is a test for tsad"
authors = [
    {name = "H", email = "emc-ironh@outlook.com"},
]
dependencies = [
    "adtk>=0.6.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
